@@ -71,3 +71,4 @@
 - Bug: error in update operation, it changed the original tuple, so also other relations using the same tuple would change. Now it copies it.
 - Added make install and uninstall
 - Optimizer generate a tree from the expression
+- Uses python-psyco when it is available
